fix: add missing background-color to Header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,6 +2,7 @@
 
 .root {
   align-items: center;
+  background-color: $third;
   box-shadow: 0px 4px 16px rgba(1, 28, 64, 0.2);
   display: flex;
   justify-content: space-between;
